# dynamic-manipulation

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md
cs_api/: dynaman.cs  simple.cs
data/: cam_stereo.yml
dll/: dll.cpp
inc/: CameraDevice.hpp  EigenTools.hpp  FloatingObject.hpp  GainPlan.hpp  ImgProcUtil.hpp  KinectApp.hpp  KinectPositionSensor.hpp  KinectSphereTracker.hpp  KinectUtility.hpp  MathUtil.hpp  PositionSensor.hpp  Projector.hpp  QPSolver.h  StereoTracker.hpp  ThrustSearch.hpp  Trajectory.hpp  WinMultiplexer.hpp  additionalGain.hpp  arfModel.hpp  geometryUtil.hpp  kalmanFilter.hpp  manipulator.hpp  odcs.hpp  projector.hpp  read-csv-to-eigen.hpp  recorder.hpp  rootFindingPoly.hpp  strategy.hpp  tracker.hpp  winMultiplexer.hpp  xiApiPlusOcv.hpp
lib/: CMakeLists.txt  CameraDevice.cpp  FloatingObject.cpp  GainPlan.cpp  ImgProcUtil.cpp  ImgProcessor.cpp  KinectApp.cpp  KinectSphereTracker.cpp  KinectUtility.cpp  MathUtil.cpp  QPSolver.cpp  StereoTracker.cpp  ThrustSearch.cpp  Trajectory.cpp  WinMultiplexer.cpp  additionalGain.cpp  arfModel.cpp  geometryUtil.cpp  manipulator.cpp  ocs.cpp  odcs.cpp  ods.cpp  projector.cpp  read-csv-to-eigen.cpp  recorder.cpp  strategy.cpp  winMultiplexer.cpp  xiApiPlusOcv.cpp
lib/deprecated/: Trajectory.cpp
sample/: ActionHandler.cpp  CMakeLists.txt  CircularEvalTest.cpp  ComputeDutyTest.cpp  CreateSequenceTest.cpp  DrawUtil.cpp  DrawUtil.hpp  FloatingObjectTest.cpp  HandStateReader.cpp  HandStateReader.hpp  HandStateReaderTest.cpp  HeadTrackerTest.cpp  K4aHeadTracker.cpp  K4aHeadTracker.hpp  LPTest.cpp  MobilityEvalTest.cpp  MonitorInfoManager.cpp  MonitorInfoManager.hpp  MuxGainTest.cpp  ThrustSearchTest.cpp  TrajectoryTest.cpp  WorkspaceEvalTest.cpp  acuityTest.cpp  asiaHapticsDemo.cpp  balloon_interface.cpp  balloon_interface.hpp  demo_arf.cpp  demo_avatar.cpp  demo_catch.cpp  demo_guidance.cpp  demo_innovative.cpp  demo_instruction.cpp  demo_manipulator.cpp  demo_notification.cpp  demo_proactive.cpp  demo_sa2020_mobility.cpp  dynaman_simulator.cpp  dynaman_simulator.hpp  graspable.cpp  haptic_icon.cpp  (+37 more)
sample/TrackIr/: NPClient.h  NPClientWraps.cpp  TrackIrApp.cpp  glRenderer.cpp  glRenderer.h  resource.h
sample/haptic_icon_strategies/: balance_strategy.cpp  balance_strategy.hpp  multiplex_strategy.cpp  multiplex_strategy.hpp  simple_strategy.cpp  simple_strategy.hpp
sample/maneuvers/: maneuvers.cpp  maneuvers.hpp
server/: CMakeLists.txt
server/client/: client.cpp  client.hpp
server/converter/: StructConverter.hpp
server/dataStruct/: position.hpp  query.hpp
server/server/: server.cpp  server.hpp
server/test/: clientTest.cpp  serverTest.cpp
src/: FloatingObject.cpp  KinectApp.cpp  KinectPositionSensor.cpp  KinectSphereTracker.cpp  KinectUtility.cpp  Projector.cpp  QPSolver.cpp  Trajectory.cpp  additionalGain.cpp  arfModel.cpp  geometryUtil.cpp  kalmanFilter.cpp  main.cpp  ocs.cpp  odcs.cpp  ods.cpp  projector.cpp
test/: CMakeLists.txt  FindDutyTest.cpp  MesArf.cpp  MultiplexDutyTest.cpp  RansacTest.cpp  TrajectoryTest.cpp  Vortex.cpp  arfModelTest.cpp  multiplexerTest.cpp  profileTest.cpp  workSpaceTest.cpp
unity_api/: dynaman_unity_ext.cs
